--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.scss
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.scss
@@ -226,8 +226,7 @@ ul {
 }
 .file-item {
     background-color: #f9fafb;
-    height: 100%;
-    // border: 0.8px solid rgb(169, 169, 169);
+    height: 80px;
     border-radius: 10px;
     font-size: 16px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
