--- a/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
@@ -5,7 +5,7 @@
   [style]="{ width: '50vw' }"
   acceptLabel="Đồng ý"
   rejectLabel="Hủy"
-  key="confirm"
+  key="confirmInitiationplan"
 ></p-confirmDialog>
 <!-- file preview -->
 <p-dialog
@@ -151,6 +151,7 @@
       <div class="col-md-9">
         <input
           type="file"
+          accept="application/pdf"
           #fileInput
           style="display: none"
           (change)="handleFileInputChange(fileInput)"
