--- a/src/app/features/post-login/school-list/school-list.component.scss
+++ b/src/app/features/post-login/school-list/school-list.component.scss
@@ -1,3 +1,4 @@
+@import "../../../../assets/scss/base";
 .fontAwesome {
   font-family: Arial, "Font Awesome 5 Free";
 }
@@ -6,13 +7,13 @@
     table-layout: fixed;
     width: 100%;
   }
-  // th,
-  // td {
-  //   font-size: 16px;
-  //   white-space: wrap; /* Prevent text from wrapping */
-  //   overflow: hidden; /* Hide overflowing text */
-  //   text-overflow: ellipsis; /* Display ellipsis for overflowing text */
-  // }
+
+  th,
+  td {
+    font-size: 16px;
+    // overflow: hidden; /* Hide overflowing text */
+    // text-overflow: ellipsis; /* Display ellipsis for overflowing text */
+  }
   ul {
     padding: 0;
     margin-bottom: 0;
@@ -24,4 +25,26 @@
     padding: 0;
     margin: 0;
   }
+}
+.action-item {
+  width: 40px;
+  height: 40px;
+  background-color: $primary;
+  border-color: $primary;
+  border-radius: 50%;
+  font-size: 16px;
+  &:hover {
+    background-color: $primary-hover;
+    border-color: $primary-hover;
+    cursor: pointer;
+  }
+  i {
+    color: #fff;
+    align-items: center;
+  }
+}
+.td-content {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
