--- a/src/app/features/post-login/user-list/user-list.component.html
+++ b/src/app/features/post-login/user-list/user-list.component.html
@@ -1,7 +1,6 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/solid.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<p-toast position="top-right" key="error"></p-toast>
 <div class="m-3">
     <h2>Tra cứu người dùng</h2>
 </div>
@@ -300,6 +299,7 @@
 
     <p-toast key="paging" position="bottom-right"></p-toast>
     <p-toast key="issueId" position="top-right"></p-toast>
+<p-toast position="top-right" key="error"></p-toast>
 
 <p-dialog header="Tạo người dùng bằng file excel" [(visible)]="visible" [modal]="true" [style]="{ width: '50vw' }" [draggable]="false" [resizable]="false">
   <div>
@@ -309,7 +309,7 @@
       (change)="onSubmitFile($event)"
       type="file"
     />
-    <button class="btn btn-primary mt-3" (click)="onCreateUserByFile()">
+    <button class="btn btn-primary mt-3" (click)="confirm()">
       Xác nhận
     </button>
     <button class="btn btn-info mt-3 ml-3" (click)="downloadTemplate()">
@@ -317,3 +317,4 @@
     </button>
   </div>
 </p-dialog>
+<p-confirmDialog key="createUserByExcel" [style]="{width: '50vw'}"></p-confirmDialog>
