--- a/src/app/features/post-login/inspection/inspection-document/inspection-document.component.html
+++ b/src/app/features/post-login/inspection/inspection-document/inspection-document.component.html
@@ -7,14 +7,13 @@
   [inspectionPlanId]="inspectionId"
   [updateRecordPopupVisible]="updateRecordPopupVisible"
   (updateRecordPopupVisibleChange)="changeUpdateRecordVisible()"
-  [recordId]="recordId"
->
-  <app-record-detail
+  [recordId]="recordId">
+</app-update-record>
+<app-record-detail
   [recordId]="recordId"
   [detailRecordPopupVisible]="detailRecordPopupVisible"
   (detailRecordPopupVisibleChange)="changeDetailRecordVisible()">
-  </app-record-detail>
-</app-update-record>
+</app-record-detail>
 <div class="container-fluid">
   <div class="row">
     <h4 class="mb-3">Chi tiết quyết định kiểm tra</h4>
