css school list

--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
@@ -141,7 +141,9 @@
     [resizable]="false"
     (onHide)="hideUploadPopup()"
   >
-    <label class="mb-1" for="">Tên tài liệu</label>
+    <label class="mb-1" for=""
+      >Tên tài liệu<span class="p-error">*</span></label
+    >
     <br />
     <input
       pInputText
@@ -155,7 +157,9 @@
       >Vui lòng điền tên tài liệu</span
     >
     <br />
-    <label class="mb-1 mt-1" for="">Mã tài liệu</label>
+    <label class="mb-1 mt-1" for=""
+      >Mã tài liệu<span class="p-error">*</span></label
+    >
     <br />
     <input
       pInputText
@@ -169,7 +173,9 @@
       >Vui lòng điền mã tài liệu</span
     >
     <br />
-    <label class="mb-1 mt-1" for="">Tài liệu</label>
+    <label class="mb-1 mt-1" for=""
+      >Tài liệu<span class="p-error">*</span></label
+    >
     <div class="mb-3 input-file-popup row">
       <div class="col-md-9">
         <input
