--- a/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
@@ -116,7 +116,9 @@
     [resizable]="false"
     (onHide)="hideUploadPopup()"
   >
-    <label class="mb-1" for="">Tên tài liệu</label>
+    <label class="mb-1" for=""
+      >Tên tài liệu<span class="p-error">*</span></label
+    >
     <br />
     <input
       pInputText
@@ -131,7 +133,9 @@
       >Vui lòng điền tên tài liệu</span
     >
     <br />
-    <label class="mb-1 mt-1" for="">Mã tài liệu</label>
+    <label class="mb-1 mt-1" for=""
+      >Mã tài liệu <span class="p-error">*</span></label
+    >
     <br />
     <input
       pInputText
@@ -146,7 +150,9 @@
       >Vui lòng điền mã tài liệu</span
     >
     <br />
-    <label class="mb-1 mt-1" for="">Tài liệu</label>
+    <label class="mb-1 mt-1" for=""
+      >Tài liệu<span class="p-error">*</span></label
+    >
     <div class="mb-3 input-file-popup row">
       <div class="col-md-9">
         <input
