--- a/src/app/features/post-login/inspection/inspection-document/inspection-document.component.html
+++ b/src/app/features/post-login/inspection/inspection-document/inspection-document.component.html
@@ -91,7 +91,7 @@
                 {{ taskList.deadline | date: "dd/MM/yyyy" }}
               </td>
               <td style="text-align: center"
-                  class="d-flex td-action justify-content-center align-items-center">
+                  class="d-flex td-action justify-content-center align-items-center action-button">
                 <div class="action-item d-flex justify-content-center align-items-center mx-2">
                   <button type="button" (click)="initDetailRecordData(taskList.taskId)">
                     <i class="bi bi-info-circle-fill"></i>
@@ -99,7 +99,12 @@
                 </div>
                 <div class="action-item d-flex justify-content-center align-items-center mx-2">
                   <button type="button" (click)="initUpdateRecordData(taskList.taskId)">
-                  <i class="bi bi-pencil-fill"></i>
+                    <i class="bi bi-pencil-fill"></i>
+                  </button>
+                </div>
+                <div class="action-item d-flex justify-content-center align-items-center mx-2">
+                  <button type="button" (click)="initUpdateRecordData(taskList.taskId)">
+                    <i class="bi bi-trash-fill"></i>
                   </button>
                 </div>
               </td>
