add loading load document in guidance document

--- a/src/app/features/post-login/assignment/assignment-tree-list/assignment-tree-list.component.html
+++ b/src/app/features/post-login/assignment/assignment-tree-list/assignment-tree-list.component.html
@@ -148,7 +148,7 @@
 
         <i
           class="bi bi-info-circle-fill"
-          (click)="onDetail(task.rootAssignmentId)"
+          (click)="onDetail(task.issue?.issueId)"
         ></i>
 
 
