--- a/src/app/features/post-login/guidance-document-list/guidance-document-detail/guidance-document-detail.component.html
+++ b/src/app/features/post-login/guidance-document-list/guidance-document-detail/guidance-document-detail.component.html
@@ -1,3 +1,18 @@
+<p-dialog
+  header="Xem tài liệu"
+  [(visible)]="pdfPreviewVisibility"
+  [style]="{ width: '90vw', height: '100vh' }"
+  [draggable]="false"
+  [resizable]="false"
+>
+  <div *ngIf="!pdfLoaded; else pdfIsLoaded" class="spinner">
+    <div class="spinner-border text-center" role="status"></div>
+    <p>Đang tải...</p>
+  </div>
+  <ng-template #pdfIsLoaded>
+    <iframe [src]="safePdfUrl" width="100%" height="105%"></iframe>
+  </ng-template>
+</p-dialog>
 <h2>Chi tiết văn bản chỉ đạo</h2>
 
 <div class="row">
@@ -72,14 +87,3 @@
         </ng-template>
     </p-table>
 </div>
-<p-dialog
-  header="Xem tài liệu"
-  [(visible)]="pdfLoaded"
-  [style]="{ width: '90vw', height: '100vh' }"
-  [draggable]="false"
-  [resizable]="false"
->
-  <div *ngIf="pdfLoaded">
-    <iframe [src]="safePdfUrl" width="100%" height="680px"></iframe>
-  </div>
-</p-dialog>
