--- a/src/app/features/post-login/guidance-document-list/guidance-document-detail/guidance-document-detail.component.scss
+++ b/src/app/features/post-login/guidance-document-list/guidance-document-detail/guidance-document-detail.component.scss
@@ -1,4 +1,23 @@
+@import "../../../../../assets/scss/base";
+
 
 .font-weight-bold {
   font-weight: bold;
+}
+
+.spinner {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  .spinner-border {
+    width: 5rem;
+    height: 5rem;
+    color: $primary;
+  }
+  p{
+    color: $primary;
+  }
 }
