--- a/src/app/features/post-login/guidance-document-list/guidance-document-create/guidance-document-create.component.html
+++ b/src/app/features/post-login/guidance-document-list/guidance-document-create/guidance-document-create.component.html
@@ -1,3 +1,10 @@
+<app-loading-complete-dialog
+  [visible]="isLoading"
+  [completed]="submitCompleted"
+  [header]="'Tạo mới văn bản bổ sung'"
+  [progress]="'Đang tạo mới văn bản bổ sung'"
+  [complete]="'Tạo mới văn bản bổ sung thành công'"
+></app-loading-complete-dialog>
 <h2>Tạo văn bản bổ sung</h2>
 <form [formGroup]="guidanceForm">
   <div class="row">
@@ -12,7 +19,7 @@
           class="form-control"
         />
         <span *ngIf="isBlank('guidanceDocumentName')" class="p-error"
-          >Không được để trống mục này</span
+        >Không được để trống mục này</span
         >
       </div>
     </div>
@@ -22,7 +29,7 @@
       </div>
       <div class="m-3">
         <span class="font-weight-bold" style="font-weight: bold" *ngIf="issue"
-          >{{ issue.issueName }}
+        >{{ issue.issueName }}
         </span>
       </div>
     </div>
@@ -34,7 +41,7 @@
       <div class="m-3">
         <textarea class="form-control" formControlName="description"></textarea>
         <span *ngIf="isBlank('description')" class="p-error"
-          >Không được để trống mục này</span
+        >Không được để trống mục này</span
         >
       </div>
     </div>
@@ -57,7 +64,7 @@
             <span
               *ngIf="isBlankForGuidanceDocuments('documentCode', i)"
               class="p-error"
-              >Không được để trống mục này</span
+            >Không được để trống mục này</span
             >
             <span
               class="p-error"
@@ -67,7 +74,7 @@
                   i
                 )
               "
-              >Trùng lặp mã văn bản</span
+            >Trùng lặp mã văn bản</span
             >
           </div>
         </div>
@@ -84,7 +91,7 @@
             <span
               *ngIf="isBlankForGuidanceDocuments('documentName', i)"
               class="p-error"
-              >Không được để trống mục này</span
+            >Không được để trống mục này</span
             >
           </div>
         </div>
@@ -145,11 +152,11 @@
   </div>
 
 </form>
-<div class="overlay" *ngIf="isLoading">
-  <div class="spinner-container">
-    <div class="spinner-border" role="status"></div>
-  </div>
-</div>
+<!--<div class="overlay" *ngIf="isLoading">-->
+<!--  <div class="spinner-container">-->
+<!--    <div class="spinner-border" role="status"></div>-->
+<!--  </div>-->
+<!--</div>-->
 
 <p-toast position="top-right" key="error"></p-toast>
 <p-confirmDialog key="createConfirm" [style]="{width: '50vw'}"></p-confirmDialog>
