--- a/src/app/features/post-login/school-list/school-list.component.html
+++ b/src/app/features/post-login/school-list/school-list.component.html
@@ -187,3 +187,10 @@
 </p-dialog>
 <p-confirmDialog key="createSchoolByExcel" [style]="{width: '50vw'}"></p-confirmDialog>
 <p-toast position="top-right" key="error"></p-toast>
+<app-loading-complete-dialog
+  [visible]="isLoading"
+  [completed]="submitCompleted"
+  [header]="'Tạo mới trường học'"
+  [progress]="'Đang tạo mới trường học'"
+  [complete]="'Tạo mới trường học thành công'"
+></app-loading-complete-dialog>
