--- a/src/app/components/loading-complete-dialog/loading-complete-dialog.component.html
+++ b/src/app/components/loading-complete-dialog/loading-complete-dialog.component.html
@@ -8,7 +8,7 @@
 >
   <div *ngIf="!completed" class="spinner">
     <div class="spinner-border text-center" role="status"></div>
-    <p>Đang tạo {{progress}}</p>
+    <p>{{progress}}</p>
   </div>
   <div *ngIf="completed" class="d-flex flex-column justify-content-center align-items-center mt-5">
     <i class="bi bi-check-circle-fill icon"></i>
