--- a/src/app/features/post-login/user-list/user-list.component.html
+++ b/src/app/features/post-login/user-list/user-list.component.html
@@ -318,3 +318,10 @@
   </div>
 </p-dialog>
 <p-confirmDialog key="createUserByExcel" [style]="{width: '50vw'}"></p-confirmDialog>
+<app-loading-complete-dialog
+  [visible]="isLoading"
+  [completed]="submitCompleted"
+  [header]="'Tạo mới người dùng bằng Excel'"
+  [progress]="'Đang tạo mới người dùng'"
+  [complete]="'Tạo mới người dùng thành công'"
+></app-loading-complete-dialog>
