--- a/src/app/features/post-login/inspection/inspection-document/inspection-document.component.scss
+++ b/src/app/features/post-login/inspection/inspection-document/inspection-document.component.scss
@@ -10,3 +10,20 @@
     }
   }
 }
+
+:host ::ng-deep {
+  .p-button {
+    background-color: $primary;
+    border-radius: 8px;
+    border: solid 1px $primary;
+    transition: all 0.5s ease;
+    width: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &:hover {
+      background-color: $primary-hover;
+      border-color: $primary-hover;
+    }
+  }
+}
