--- a/src/app/features/post-login/inspection/component/file-item/file-item.component.scss
+++ b/src/app/features/post-login/inspection/component/file-item/file-item.component.scss
@@ -22,6 +22,17 @@
   }
 }
 
+.file-item-empty {
+  background-color: #f9fafb;
+  border-radius: 10px;
+  font-size: 16px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  i{
+    font-size: 2.5rem;
+    color: $primary;
+  }
+}
+
 .spinner {
   width: 100%;
   height: 100%;
